--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "babel-polyfill": "^6.23.0",
     "jquery": "^3.2.1",
     "ol": "^4.6.4",
-    "ol-ext": "git+https://github.com/darkscript/ol-ext.git"
+    "ol-ext": "git+https://github.com/thhomas/ol-ext.git"
   },
   "devDependencies": {
     "chai": "^4.1.1",
