--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "serve": "http-server",
-    "test": "phantomjs --web-security=false --ssl-protocol=any ./node_modules/mocha-phantomjs-core/mocha-phantomjs-core.js test/TestRunner.html spec",
-    "lint": "eslint ./src/**/*.js --ext .js src test --cache",
+    "test": "karma start karma.conf.js",
+    "lint": "eslint ./**/*.js --ext .js control test --cache --verbose",
     "build": "gulp build"
   },
   "repository": {
@@ -30,21 +30,43 @@
   },
   "homepage": "https://github.com/thhomas/ol-comparison-tools#readme",
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "jquery": "^3.2.1",
+    "gulp": "^3.9.1",
+    "jquery": "^3.3.1",
     "ol": "^4.6.4",
-    "ol-ext": "git+https://github.com/thhomas/ol-ext.git"
+    "ol-ext": "git+https://github.com/Viglino/ol-ext#npm-restructured"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^16.0.0",
     "chai": "^4.1.1",
     "del": "^3.0.0",
+    "gulp-babel": "^7.0.1",
     "gulp-concat-util": "^0.5.5",
     "gulp-rename": "^1.2.2",
     "gulp-replace-task": "^0.11.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
     "http-server": "^0.10.0",
-    "mocha": "^3.5.0",
-    "mocha-phantomjs-core": "^2.1.2"
+    "karma": "^2.0.0",
+    "karma-browserify": "^5.2.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sinon-chai": "^1.3.3",
+    "mocha": "^3.5.3",
+    "mocha-phantomjs-core": "^2.1.2",
+    "requirejs": "^2.3.5",
+    "sinon": "^4.2.2",
+    "sinon-chai": "^2.14.0",
+    "through2": "^2.0.3",
+    "watchify": "^3.10.0"
   }
 }
