fix ol-ext using

--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,8 @@
 # ignore examples
 examples
 # ignore the dist
-dist/*.js
+dist
+# ignore the test dir
+test
 # ignore the src (copy in the root)
 src
