--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ol-comparison-tools",
-  "version": "v1.0.0-beta.1",
+  "version": "v1.0.0-beta.2",
   "description": "An Openlayers extension adding a control to handle comparison tools between 2 layers.",
   "main": "comparisontools.js",
   "directories": {
@@ -11,6 +11,7 @@
     "serve": "http-server",
     "test": "karma start karma.conf.js",
     "lint": "eslint ./**/*.js --ext .js control test --cache --verbose",
+    "build-examples": "gulp build-examples",
     "prepack": "gulp prepublish",
     "postpack": "gulp postpublish"
   },
@@ -32,8 +33,8 @@
   "homepage": "https://github.com/thhomas/ol-comparison-tools#readme",
   "dependencies": {
     "jquery": "^3.3.1",
-    "ol": "^4.6.4",
-    "ol-ext": "^2.0.0"
+    "ol": "^5.1.3",
+    "ol-ext": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -65,10 +66,14 @@
     "karma-sinon-chai": "^1.3.3",
     "mocha": "^3.5.3",
     "mocha-phantomjs-core": "^2.1.2",
+    "pump": "^3.0.0",
     "requirejs": "^2.3.5",
     "sinon": "^4.2.2",
     "sinon-chai": "^2.14.0",
     "through2": "^2.0.3",
-    "watchify": "^3.10.0"
+    "uglify-es": "^3.3.9",
+    "watchify": "^3.10.0",
+    "webpack": "^4.16.5",
+    "webpack-stream": "^5.1.1"
   }
 }
