--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "jquery": "^3.2.1",
-    "ol": "^4.3.1",
-    "ol3-ext": "^1.0.1"
+    "ol3-ext": "^1.0.1",
+    "openlayers": "^4.6.5"
   },
   "devDependencies": {
     "chai": "^4.1.1",
     "del": "^3.0.0",
+    "gulp": "^3.9.1",
     "gulp-concat-util": "^0.5.5",
     "gulp-rename": "^1.2.2",
     "gulp-replace-task": "^0.11.0",
@@ -45,6 +46,7 @@
     "gulp-uglify": "^3.0.0",
     "http-server": "^0.10.0",
     "mocha": "^3.5.0",
-    "mocha-phantomjs-core": "^2.1.2"
+    "mocha-phantomjs-core": "^2.1.2",
+    "yargs": "^12.0.2"
   }
 }
