--- a/package.json
+++ b/package.json
@@ -32,51 +32,26 @@
     "url": "https://github.com/thhomas/ol-comparison-tools/issues"
   },
   "homepage": "https://github.com/thhomas/ol-comparison-tools#readme",
-  "dependencies": {
+  "peerDependencies": {
     "jquery": "^3.3.1",
-    "ol": "^5.2.0",
+    "ol": "^6.0.0",
     "ol-ext": "^3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babelify": "^8.0.0",
-    "browserify": "^16.0.0",
-    "chai": "^4.1.1",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
+    "eslint": "^5.10.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-clean": "^0.4.0",
-    "gulp-concat-util": "^0.5.5",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace-task": "^0.11.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglify": "^3.0.0",
-    "http-server": "^0.10.0",
-    "karma": "^2.0.0",
-    "karma-browserify": "^5.2.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-sinon-chai": "^1.3.3",
-    "mocha": "^3.5.3",
-    "mocha-phantomjs-core": "^2.1.2",
-    "pump": "^3.0.0",
-    "requirejs": "^2.3.5",
-    "sinon": "^4.2.2",
-    "sinon-chai": "^2.14.0",
-    "through2": "^2.0.3",
-    "uglify-es": "^3.3.9",
-    "watchify": "^3.10.0",
-    "webpack": "^4.16.5",
-    "webpack-stream": "^5.1.1"
+    "gulp-cli": "^2.2.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-header": "^2.0.5",
+    "gulp-minify": "^3.1.0",
+    "gulp-watch": "^5.0.1",
+    "gulp-jsdoc3": "^2.0.0",
+    "live-server": "^1.2.0",
+    "minimist": "^1.2.0",
+    "plugin-error": "^1.0.1",
+    "through2": "^2.0.3"
   }
 }
